packer/ansible/roles/minikube/files/samples/gitlab/gitlab-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: default
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      name: gitlab
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:latest # https://hub.docker.com/r/gitlab/gitlab-ce
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
          - name: ssh
            containerPort: 22
        volumeMounts:
          - name: gitlab
            mountPath: /var/opt/gitlab
            subPath: gitlab_data
          - name: gitlab
            mountPath: /etc/gitlab
            subPath: gitlab_configuration
      restartPolicy: Always
      volumes:
        - name: gitlab
          persistentVolumeClaim:
            claimName: gitlab-claim
