packer/ansible/roles/minikube/files/samples/gitlab/gitlab-service.yaml
---
# ClusterIP type
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: default
  labels:
    app: gitlab
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  selector:
    app: gitlab
