packer/ansible/roles/minikube/files/samples/gitlab/gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-ingress
spec:
  rules:
    - host: ec2-15-165-46-34.ap-northeast-2.compute.amazonaws.com
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-service
              servicePort: 80
